# aiogram-template

./: README.md  main.py  pyproject.toml
app/: _const.py  ioc.py
app/core/: __init__.py  loggers.py
app/services/users/: repo.py  service.py
