[project]
name = "aiogram-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22",
    "alembic>=1.17.2",
    "colorama>=0.4.6",
    "dishka>=1.7.2",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "raito>=1.3.7",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "structlog>=25.5.0",
]
